<resources>
    <string name="app_name">Mime 3</string>
    <string name="mensaje">Pensamientos para reflexión y emprendimiento</string>
    <string name="crear_cuenta">Crear una cuenta</string>
    <string name="tienes_cuenta">¿Ya tiene una cuenta?</string>
    <string name="iniciar_sesion">Iniciar sesión</string>

    <!-- Iniciar sesión -->
    <string name="usuario">Usuario</string>
    <string name="usuario_hint">Nombre de usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="contrasena_hint">Escriba su contraseña</string>

    <string name="informacion">Información</string>
    <string name="acerca_de">Acerca de</string>
    <string name="ayuda">Ayuda</string>
    <string name="quienes_somos">Quiénes somos</string>
    <string name="mision">Misión</string>
    <string name="vision">Visión</string>


    <string name="quienes_somos_contenido">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin condimentum velit nisi, vel dignissim sapien consequat in. Maecenas tristique nulla ex, at tristique mi sagittis ut. Sed eu volutpat diam, at aliquam metus. Nullam id varius nibh, ut vestibulum lorem. Proin non dui blandit, mollis sapien at, condimentum lorem. \n\nQuisque mi sapien, maximus in faucibus id, posuere ac nulla. Morbi sollicitudin risus quis orci tincidunt, quis vulputate nunc facilisis. Cras gravida, est id ornare tincidunt, ex ipsum dapibus tortor, sit amet fringilla arcu dolor id erat. Curabitur ante tellus, dictum vel sollicitudin ac, maximus nec orci. Nullam volutpat velit ac maximus mollis. \n\nSed lacinia tortor quis quam lacinia, ac convallis nulla tincidunt. Aenean congue nulla nec nisl sagittis suscipit. Suspendisse felis orci, tincidunt id consectetur vel, faucibus in nibh. Vivamus eget nulla laoreet, pulvinar orci vitae, pharetra lacus. Mauris cursus, quam bibendum mollis pellentesque, nunc ipsum fringilla tortor, et blandit sapien purus ut orci.</string>
    <string name="mision_contenido">Nunc eget viverra purus, vitae molestie sem. Quisque urna felis, cursus non viverra id, tincidunt nec lacus. Nunc nisi justo, sodales vitae porttitor eget, varius sed purus. Maecenas a ipsum posuere, commodo ipsum id, hendrerit eros. In vel velit ligula. Aenean neque enim, maximus vitae tempor at, accumsan a odio. \n\nNullam diam metus, egestas in quam id, sodales varius risus. Suspendisse sed arcu et nibh tempus fermentum. Aenean sit amet nisi iaculis lectus posuere porttitor sed eu augue. Vestibulum tincidunt suscipit purus, eget euismod orci feugiat et. Proin sollicitudin pulvinar aliquam. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. \n\nVestibulum purus tortor, consectetur ut eleifend a, aliquet nec risus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed ac feugiat diam. Proin in ultricies nisl.</string>
    <string name="vision_contenido">Pellentesque ut sapien pretium, cursus tortor quis, blandit nisi. Duis sit amet cursus metus, ac placerat tortor. Nulla sit amet eros sit amet velit porttitor suscipit. Vivamus eleifend tellus pulvinar elit sagittis, et pharetra velit tempus. Fusce ante ligula, condimentum at eros et, mattis fermentum mi. \n\nDuis laoreet aliquam mauris in gravida. Aenean tempor suscipit dui, laoreet rutrum ante luctus quis. Integer accumsan nisl quis fermentum consequat. Nullam pellentesque, risus et cursus sollicitudin, ante purus blandit erat, sed commodo nisl nulla sed metus. Nulla diam eros, eleifend ut feugiat at, tristique ac massa. Nunc condimentum eget tellus nec gravida. \n\nProin fermentum odio eget est fringilla, nec imperdiet elit sollicitudin. Pellentesque accumsan leo et tortor pharetra, et pulvinar libero aliquam. In hac habitasse platea dictumst. Quisque non ultricies metus, laoreet pellentesque erat.</string>
    <string name="title_activity_escritorio">EscritorioActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">David Chura</string>
    <string name="nav_header_subtitle">davidchura@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_inicio">Inicio</string>
    <string name="menu_categorias">Categorías</string>
    <string name="menu_productos">Productos</string>
    <string name="menu_colaboradores">Colaboradores</string>
    <string name="menu_cerrar_sesion">Cerrar sesión</string>
    <string name="menu_salir">Salir</string>
    <string name="sesion">Sesión</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="categorias">Categorías</string>
    <string name="direccion">Av. 28 de Julio 5353. Lima - Perú</string>
    <string name="telefono">995-097-571</string>
    <string name="web">http://www.davidchura.com</string>
    <string name="correo_electronico">davidchura@gmail.com</string>

</resources>
