<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/nav_categorias"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_categorias" />
        <item
            android:id="@+id/nav_productos"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_productos" />
        <item
            android:id="@+id/nav_colaboradores"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_colaboradores" />
    </group>

    <item android:title="@string/sesion">
        <menu>
            <item
                android:id="@+id/nav_cerrar_sesion"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_cerrar_sesion" />
            <item
                android:id="@+id/nav_salir"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_salir" />
        </menu>
    </item>

</menu>
