<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_ventana"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_logo"
        />
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mensaje"
        style="@style/MegaTexto"
        />
        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
            <Button
        android:id="@+id/btnCrearCuenta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crear_cuenta"
        />
                <TextView
                    android:id="@+id/tvIP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/raleway_thin"
                    android:textSize="48sp"
                    android:height="60dp"/>
            </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="bottom"
        android:layout_weight="1">
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tienes_cuenta"
        android:layout_marginRight="12dp"/>
        <TextView
            android:id="@+id/tvIniciarSesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iniciar_sesion"
            style="@style/textoVinculo"/>


    </LinearLayout>


</LinearLayout>